Fixed Upgrade Object Reseting and made potential actions in analytics

--- a/Analytics/UpgradeSystemAnalytics.ipynb
+++ b/Analytics/UpgradeSystemAnalytics.ipynb
@@ -12,6 +12,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3f34129e",
+   "metadata": {},
+   "source": [
+    "## Visualising the Microbial Mayhem Upgrade System Data\n",
+    "\n",
+    "### Our aim\n",
+    "\n",
+    "- To collect, record, and store key data points from players’ experiences interacting with out package\n",
+    "- Interpret this data into meaningful and insightful graphs.\n",
+    "- Draw conclusions supported by our data and visualisations.\n",
+    "- Attempt to prove or disprove our hypothesis.\n",
+    "\n",
+    "### Our hypothesis\n",
+    "\n",
+    "- The Upgrade System is going to be used more often in longer levels\n",
+    "- The user will be more inclined to use the Upgrade System if levels take longer to win\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "ddb922ed",
@@ -73,7 +93,19 @@
     "- **EyeBall** and **BigToe** showed little interactions, they are tutorial scene and players seemed to only get the hang of player upgrade interactions in them.\n",
     "\n",
     "## Potential Actions\n",
-    "- **Tutorial** upgrade prompts or tutorials in lower interaction scenes."
+    "- Upgrade System Package should Include a short tutorial to put into the game which shows the user how to use it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54e31fee",
+   "metadata": {},
+   "source": [
+    "## Visualising the Microbial Mayhem Upgrade System vs Collapse/Expand Interactions\n",
+    "\n",
+    "### Our hypothesis\n",
+    "\n",
+    "- Upgrade System Intractions will be greater then Collapse / Expand Interactions as users keep the upgrade panel open during gameplay"
    ]
   },
   {
@@ -121,7 +153,24 @@
     "\n",
     "### Conclusion:\n",
     "- There is a vastly larger amount of Expand / Collapse Actions then Upgrade Interactions. This could mean that the users find the panel to be too large and it taking up too much space on screen.\n",
-    "- There might be an issue with how the users are interpreting the upgrade system implemented in the game, trying to find the upgrades available in the upgrade panel. Leading to it being closed and open more often then it should."
+    "- There might be an issue with how the users are interpreting the upgrade system implemented in the game, trying to find the upgrades available in the upgrade panel. Leading to it being closed and open more often then it should.\n",
+    "- The users might be trying to upgrade their skills while being unable too because of no visual identification of upgrade avilablity\n",
+    "\n",
+    "## Potential Actions\n",
+    "- Check if the user can upgrade any of their upgrade objects and showcase an identification of that to notify the user."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd5dfeec",
+   "metadata": {},
+   "source": [
+    "## Visualising the Microbial Mayhem Upgrade Interactions with level progression\n",
+    "\n",
+    "### Our hypothesis\n",
+    "\n",
+    "- As the level progression goes up, the amount of Upgrade system Interactions should go up with it\n",
+    "- Players should be able to upgrade more often with higher infection percentage count, as they explore and complete the levels"
    ]
   },
   {
@@ -163,7 +212,10 @@
     "- There are many players which dont use the Upgrade System (High Infection Percentage with low Interaction Count)\n",
     "- There is strong evidence that the upgrade power or level gaining needs to be improved as players are able to complete levels without using the upgrade system\n",
     "- Tutorial might need to be improved in relation with Upgrade System as there seems to be players which might not be aware of the upgrade system\n",
-    "- The Vast Majority of Upgrade System Interactions are in the 4-6 Range. This could mean that People are not using it often enough and dont require the upgrades help."
+    "- The Vast Majority of Upgrade System Interactions are in the 4-6 Range. This could mean that People are not using it often enough and dont require the upgrades help.\n",
+    "\n",
+    "## Potential Actions\n",
+    "- Add a pause game option with the Upgrade System. Where the users can pause their game as they try to upgrade, this way they might find it easier to upgrade in difficult situations which are more likely to accur in later stages of the level"
    ]
   }
  ],
